Add images for each recipes

--- a/recipes/bigos.html
+++ b/recipes/bigos.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Bigos</h1>
-    <img src="../images/bigos.jpg" alt="bigos with the bread">
+    <img src="../images/bigos.jpg" alt="Bigos with the bread">
 </body>
 </html>
