Add ingredients ul and directions ol add gif

--- a/recipes/bigos.html
+++ b/recipes/bigos.html
@@ -9,5 +9,35 @@
 <body>
     <h1>Bigos</h1>
     <img src="../images/bigos.jpg" alt="Bigos with the bread">
+    <p>
+        Bigos is almost a Polish national dish. This is a traditional recipe from Poland. Bigos is a rich flavorful stew with sauerkraut, Polish sausage, beef, pork, red wine, caraway seeds and more. The longer it cooks, the better it tastes.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>9 cups boiling water, divided</li>
+        <li>3 pounds sauerkraut - rinsed, drained and chopped</li>
+        <li>15 pitted prunes</li>
+        <li>5 whole allspice berries</li>
+        <li>3 bay leaves</li>
+        <li>1 cup dried mushrooms</li>
+        <li>2 tablespoons vegetable oil</li>
+        <li>2 onion, chopped</li>
+        <li>1 Polish sausage, sliced</li>
+        <li>½ pound beef stew meat, cubed</li>
+        <li>½ pound boneless pork shoulder, cubed</li>
+        <li>½ cup bacon strips, diced</li>
+        <li>1 tablespoon caraway seeds</li>
+        <li>1 teaspoon dried marjoram</li>
+        <li>salt and pepper to taste</li>
+        <li>¾ cup red wine</li>
+        <li>3 tablespoons tomato paste (Optional)</li>
+    </ul>
+    <h2>Directions</h2>
+    <li>Place sauerkraut in a large pan or casserole dish and pour in 4 cups of boiling water. Add prunes, allspice, and bay leaves. Simmer until Sauerkraut is soft, about 50 minutes.</li>
+        <li>Pour about 1 cup of boiling water over mushrooms and soak to rehydrate, about 30 minutes. Drain and chop mushrooms, reserving the liquid.</li>
+        <li>Heat oil in a frying pan over medium to high heat. Add onion and sausage. Saute while stirring until onion is soft and sausage is browned, about 5 minutes.</li>
+        <li>In a separate pan, bring about 4 cups of water to a boil. Add beef, pork, and bacon. Simmer until cooked through for 20 minutes, then drain.</li>
+        <li>When sauerkraut is soft, add the drained meat mixture, sausage-onion mixture, and soaked mushrooms; mix well. Simmer uncovered over low heat, about 20 minutes.</li>
+        <li>Pour in red wine and cook for 15 minutes until flavors are well blended. Season with caraway seeds, marjoram, salt, and pepper. Stir in tomato puree. If the stew is too dry, pour in some of the water reserved from soaking the mushrooms, and simmer so flavors combine, about 5 minutes.</li>
 </body>
 </html>
