--- a/recipes/mizeria.html
+++ b/recipes/mizeria.html
@@ -11,5 +11,23 @@
     <h1>Mizeria</h1>
 
     <img src="../images/mizeria.jpg" alt="mizeria on a plate">
+
+    <p>Polish cucumber salad. It serves on Christmas Eve.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li> 1 pound small cucumbers, peeled and thinly sliced</li>
+        <li> salt to taste</li>
+        <li>1 bunch dill, chopped</li>
+        <li>2½ tablespoons sour cream</li>
+        <li>1 teaspoon lemon juice</li>
+        <li>1 pinch white sugar</li>
+        <li>ground black pepper to taste</li>
+    </ul>
+    <h2>Directions</h2>
+
+    <ol>
+        <li>Sprinkle salt over cucumbers in a bowl. Let stand until cucumbers are soft, about 5 minutes. Squeeze liquid from cucumbers and discard. Add dill to cucumbers.</li>
+        <li>Mix sour cream, lemon juice, and sugar in a bowl; add to cucumbers and toss to coat. Season with black pepper. Chill completely before serving, at least 30 minutes.</li>
+    </ol>
 </body>
 </html>
