--- a/recipes/nalesniki.html
+++ b/recipes/nalesniki.html
@@ -9,5 +9,25 @@
 <body>
     <h1>Nalesniki</h1>
     <img src="../images/nalesniki.jpg" alt="Nalesniki on the plate">
+    <p>Sweet cheese filling goes well with sweet Polish nalesniki, also known as Polish blintzes or filled crepes. Once filled and rolled, they can be baked, pan-fried, or dipped in beaten egg and bread crumbs and fried. Serve with fruit sauce, like a fresh blueberry sauce, if desired.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups ricotta cheese</li>
+        <li>3 ounces cream cheese, softened</li>
+        <li>1 egg yolk</li>
+        <li>2 tablespoons butter, melted</li>
+        <li>1 tablespoon white sugar</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>½ teaspoon salt</li>
+        <li>12 crepes</li>
+        <li>1 tablespoon butter, divided</li>
+    </ul>
+    <h2>Directions</h2>
+    <ol>
+        <li>Process ricotta cheese and cream cheese in a food processor until smooth and creamy; add egg yolk, melted butter, sugar, vanilla extract, and salt and process until fluffy.</li>
+        <li>Divide cheese mixture between the crepes. Spread filling into a thin layer and roll crepes around the filling.</li>
+        <li>Melt 1 teaspoon butter in a skillet over medium heat. Fry 3 crepes in melted butter until heated through, 1 to 2 minutes per side; repeat with remaining butter and crepes.</li>
+    </ol>
 </body>
 </html>
