--- a/recipes/pierogi.html
+++ b/recipes/pierogi.html
@@ -9,5 +9,22 @@
 <body>
     <h1>Pierogi</h1>
     <img src="../images/pierogi.jpg" alt="pierogi on the plate">
+    <p>Pierogi ready to be stuffed with your favorite filling.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>4 cups all-purpose flour</li>
+        <li>1 teaspoon salt</li>
+        <li>2 teaspoons vegetable oil</li>
+        <li>¼ teaspoon baking powder</li>
+        <li>1 cup warm water</li>
+        <li>1 egg, beaten</li>
+    </ul>
+<h2>Directions</h2>
+    <ol>
+        <li>In a large bowl mix together the flour, salt, and baking powder. Make a well in the center.</li>
+        <li>In a separate bowl mix together the vegetable oil, warm water, and beaten egg. Pour into the well of the dry ingredients. Knead dough for 8 to 10 minutes.</li>
+        <li>Cover dough and let rest for 2 hours. Roll out and fill as desired.</li>
+    </ol>
 </body>
 </html>
